--- a/ImplicitIntent/app/src/main/AndroidManifest.xml
+++ b/ImplicitIntent/app/src/main/AndroidManifest.xml
@@ -10,11 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ExplicitIntent"
+        android:theme="@style/Theme.ImplicitIntent"
         tools:targetApi="31">
-        <activity
-            android:name=".SecondActivity"
-            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
