Retrofit and Api classes added including TMDBService.kt interface

--- a/MovieApp/app/build.gradle
+++ b/MovieApp/app/build.gradle
@@ -17,6 +17,10 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+
+        buildConfigField "String","API_KEY","\"5efec856d7f9d50d09e34a7df46068e3\""
+        buildConfigField "String","BASE_URL","\"https://api.themoviedb.org/3\""
     }
 
     buildTypes {
