--- a/MovieApp/app/build.gradle
+++ b/MovieApp/app/build.gradle
@@ -2,7 +2,10 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-    id 'com.google.dagger.hilt.android' version '2.44' apply false
+//    id 'com.google.dagger.hilt.android' version '2.44' apply false
+    // Apply Dagger Hilt plugin
+//    id 'dagger.hilt.android.plugin' version '2.44'
+
 }
 
 android {
@@ -82,8 +85,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    implementation "com.google.dagger:hilt-android:2.44"
-    kapt "com.google.dagger:hilt-compiler:2.44"
+//    implementation 'com.google.dagger:hilt-android-gradle-plugin:2.44'
+//    kapt "com.google.dagger:hilt-compiler:2.44"
+//    implementation 'com.google.dagger:dagger:2.44' // Replace '2.x' with the latest version of Dagger
+//    kapt 'com.google.dagger:dagger-compiler:2.44' // Replace '2.x' with the same Dagger version as above
+    // Add Dagger Hilt dependencies
+    implementation 'com.google.dagger:hilt-android:2.44'
+    kapt 'com.google.dagger:hilt-android-compiler:2.38.1'
 
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
