--- a/MovieApp/build.gradle
+++ b/MovieApp/build.gradle
@@ -1,8 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+//buildscript {
+//    repositories {
+//        google()
+//        mavenCentral()
+//    }
+//    dependencies {
+//        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.44.1'
+//    }
+//}
 
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
-//    id 'dagger.hilt.android.plugin' version '2.44' apply true
+//    id 'com.google.dagger.hilt.android.plugin' apply true
+    id 'com.google.dagger.hilt.android' version "2.44" apply false
 }
