--- a/MovieApp/app/build.gradle
+++ b/MovieApp/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-    id 'com.google.dagger.hilt.android'
+//    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -45,6 +45,12 @@ android {
     buildFeatures {
         dataBinding = true
     }
+
+    kapt {
+        arguments {
+            arg("dagger.formatGeneratedSource", "disabled")
+        }
+    }
 }
 
 dependencies {
@@ -58,6 +64,7 @@ dependencies {
             because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
         }
     }
+
 
 
     implementation 'androidx.core:core-ktx:1.10.1'
@@ -84,8 +91,10 @@ dependencies {
 
 
     // Dagger
-    implementation 'com.google.dagger:hilt-android:2.44'
-    kapt 'com.google.dagger:hilt-android-compiler:2.44'
+//    implementation 'com.google.dagger:hilt-android:2.44'
+//    kapt 'com.google.dagger:hilt-android-compiler:2.44'
+    implementation 'com.google.dagger:dagger:2.44.2'
+    kapt 'com.google.dagger:dagger-compiler:2.44.2'
 
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
