Realtime Firebase Database  & Firebase Firestore Database all done from setting and getting data from firebase and documents and collection are also done

--- a/FirebaseApp/app/build.gradle
+++ b/FirebaseApp/app/build.gradle
@@ -53,4 +53,7 @@ dependencies {
     // Add the dependency for the Realtime Database library
     implementation("com.google.firebase:firebase-database-ktx")
 
+    // Declare the dependency for the Cloud Firestore library
+    implementation("com.google.firebase:firebase-firestore-ktx")
+
 }
