--- a/JournalApp/app/build.gradle
+++ b/JournalApp/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     // Add the Google services Gradle plugin
     id("com.google.gms.google-services")
-
+    id 'kotlin-kapt'
 }
 
 android {
@@ -58,5 +58,10 @@ dependencies {
     implementation("com.google.firebase:firebase-auth-ktx")
     // Declare the dependency for the Cloud Firestore library
     implementation("com.google.firebase:firebase-firestore-ktx")
+
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
 
 }
