Creating Menu and declare variables in JournalList.kt

--- a/JournalApp/app/src/main/AndroidManifest.xml
+++ b/JournalApp/app/src/main/AndroidManifest.xml
@@ -16,10 +16,10 @@
             android:name=".JournalList"
             android:exported="false" />
         <activity
-            android:name=".SignUpActivity"
+            android:name=".view.SignUpActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".view.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
