--- a/JournalApp/app/build.gradle
+++ b/JournalApp/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     // Declare the dependency for the Cloud Firestore library
     implementation("com.google.firebase:firebase-firestore-ktx")
 
+    // Add the dependency for the Cloud Storage library
+    implementation("com.google.firebase:firebase-storage-ktx")
 
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.14.2'
